--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -136,7 +136,7 @@ layout: compress
             <strong>Navigation</strong>
             <li><a href="/">Home</a></li>
             {% for i in site.urls %}
-              <li><a class="about" href="{{ i.url }}">{{ i.text }}</a></li>
+              <li><a class="about" href="{{ i.url }}">{{ i.text }}</a><li>안녕하세요</li><li>테스트애요</li></li>
             {% endfor %}
           </ul>
         </div>
