--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -139,8 +139,8 @@ layout: compress
               <li>
 								<a class="about" href="{{ i.url }}">{{ i.text }}</a>
 								{% if i.children %}
-									<li>안녕하세요</li>
-									<li>테스트애요</li>
+									<li style="margin-left: 10px;">안녕하세요</li>
+									<li style="margin-left: 10px;">테스트애요</li>
 								{% endif %}
 							</li>
             {% endfor %}
