--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -133,7 +133,7 @@ layout: compress
           </div>
           <hr />
           <ul class="sidebar-nav">
-            <strong>목록</strong>
+            <strong>Category</strong>
             <li><a href="/">Home</a></li>
             {% for i in site.urls %}
               <li>
