--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -138,10 +138,10 @@ layout: compress
             {% for i in site.urls %}
               <li>
 		<a class="about" href="{{ i.url }}">{{ i.text }}</a>
-		{% if i.children %}
+		<!--{% if i.children %}
 		  {% for i in i.children %}
 		    <li style="margin-left: 10px;">{{i.children}}</li>
-		  {% endif %}
+		  {% endif %} -->
 		</li>
             {% endfor %}
           </ul>
