--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -136,13 +136,11 @@ layout: compress
             <strong>Category</strong>
             <li><a href="/">Home</a></li>
             {% for i in site.urls %}
-              <li>
-		<a class="about" href="{{ i.url }}">{{ i.text }}</a>
+              <li><a class="about" href="{{ i.url }}">{{ i.text }}</a></li>
 		<!--{% if i.children %}
 		  {% for i in i.children %}
 		    <li style="margin-left: 10px;">{{i.children}}</li>
 		  {% endif %} -->
-		</li>
             {% endfor %}
           </ul>
         </div>
