--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -137,6 +137,9 @@ layout: compress
             <li><a href="/">Home</a></li>
             {% for i in site.urls %}
               <li><a class="about" href="{{ i.url }}">{{ i.text }}</a></li>
+              {% if i.children %}
+                <li>{{ i.children }}</li>
+              {% endif %}
             {% endfor %}
           </ul>
         </div>
