--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -139,7 +139,7 @@ layout: compress
               <li><a class="about" href="{{ i.url }}">{{ i.text }}</a></li>
               {% if i.children %}
                 {% for j in i.children %}
-                  <li>{{ j }}</li>
+                  <li style="margin-left: 10px;">{{ j }}</li>
                 {% endfor %}              
               {% endif %}
             {% endfor %}
