--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -133,8 +133,8 @@ layout: compress
           </div>
           <hr />
           <ul class="sidebar-nav">
-            <strong>Navigation</strong>
-            <li><a href="/">Home</a></li>
+            <strong>Blog</strong>
+<!--             <li><a href="/">Home</a></li> -->
             {% for i in site.urls %}
               <li><a class="about" href="{{ i.url }}">{{ i.text }}</a></li>
               {% if i.children %}
