--- a/static/css/main.css
+++ b/static/css/main.css
@@ -31,7 +31,7 @@ h2, h3 {
 }
 a, a:link, a:active {
   text-decoration: none;
-  color: #1E02FF;
+  color: #DC8D5A;
 }
 a:hover {
   color: #B3B3B3;
