--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,7 +12,7 @@ layout: default
   </span>
 {% endif %}
 
-<div class="content">
+<div class="content" style="margin-top: 40px;">
   <div class="post">{{ content }}</div>
   {% include share-page.html %}
 </div>
