--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,7 +14,7 @@ layout: default
 
 <div class="content" style="margin-top: 40px;">
   <div class="post">{{ content }}</div>
-<!--   {% include share-page.html %} -->
+  {% include share-page.html %}
 </div>
 
 {% assign hasSimilar = '' %}
