--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -109,6 +109,12 @@ layout: compress
         ga('send', 'pageview');
       </script>
     {% endif %}
+    
+    <!-- Math Equation -->
+    {% if page.use_math %}
+      {% include mathjax_support.html %}
+    {% endif %}
+    
   </head>
   <body>
     <div class="container">
