--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,5 +1,6 @@
 body {
-  font-family: "Roboto Condensed", Arial, sans-serif;
+/*   font-family: "Roboto Condensed", Arial, sans-serif; */
+  font-family: "Noto Sans KR", Arial, sans-serif;
   background: url("/static/img/subtle_dots.png");
   line-height: 1.5em;
   font-weight: 300;
