--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <header class="post-header">
-  <h1 class="post-title">{{ page.title }}</h1>
+  <h1 class="post-title" style="font-weight:800; padding-top: 40px;">{{ page.title }}</h1>
 </header>
 
 <span class="time">{{ page.date | date_to_string }}</span>
@@ -12,7 +12,7 @@ layout: default
   </span>
 {% endif %}
 
-<div class="content" style="margin-top: 40px;">
+<div class="content" style="padding-top: 40px; border-top: 1px solid #eee;">
   <div class="post">{{ content }}</div>
   {% include share-page.html %}
 </div>
