--- a/static/css/main.css
+++ b/static/css/main.css
@@ -25,11 +25,17 @@ h1, h2, h3 {
 }
 h1 {
   margin-bottom: 10px;
-  font-size: 25px;
+  font-size: 35px;
+	font-weight: 800;
 }
 h2, h3 {
-  margin-bottom: 5px;
-	font-size: 32px;
+  margin-bottom: 20px;
+	font-size: 30px;
+	font-weight: 700;
+}
+h4 {
+	font-size: 20px;
+	font-weight: 600;
 }
 a, a:link, a:active {
   text-decoration: none;
@@ -38,6 +44,10 @@ a, a:link, a:active {
 a:hover {
   color: #B3B3B3;
   text-decoration: underline;
+}
+
+blockquote {
+	font-style: italic;
 }
 
 /* Layout */
