--- a/static/css/main.css
+++ b/static/css/main.css
@@ -19,6 +19,7 @@ span.time, span.categories {
   margin-bottom: 5px;
   font-size: 11px;
 }
+
 h1, h2, h3 {
   color: #696969;
   font-weight: normal;
@@ -53,6 +54,10 @@ blockquote {
 /* Layout */
 .main-layout {
   background: #fff;
+}
+.author-name{
+	font-size: 25px;
+	font-weight: 600;
 }
 .sidebar-nav {
   margin: 0;
