--- a/static/css/main.css
+++ b/static/css/main.css
@@ -30,9 +30,14 @@ h1 {
 	font-weight: 800;
 }
 h2, h3 {
-  margin-bottom: 20px;
+  margin-bottom: 24px;
 	font-size: 28px;
 	font-weight: 700;
+}
+h3 {
+	margin-bottom: 10px;
+	font-size: 24px;
+	font-weight: 500;
 }
 h4 {
 	font-size: 20px;
