--- a/static/css/main.css
+++ b/static/css/main.css
@@ -111,6 +111,9 @@ div.col-sm-3 {
 	margin-bottom: 50px;
   font-size: 11px;
   color: #666;
+	position: sticky;
+	top: 20px;
+	padding-bottom: 20px;
 }
 div.col-sm-3 strong {
   font-size: 16px;
