--- a/static/css/main.css
+++ b/static/css/main.css
@@ -202,3 +202,9 @@ div.col-sm-3 div.profile-about {
     margin-top: 30px;
   }
 }
+@media (max-width: 768px) {
+	div.col-sm-3 {
+		width: 100%;
+	}
+}
+
