--- a/static/css/main.css
+++ b/static/css/main.css
@@ -199,6 +199,7 @@ div.col-sm-3 div.profile-about {
 }
 @media (max-width: 768px) {
   div.col-sm-3 {
+		position: relative;
     margin-top: 30px;
   }
 }
